# Custom-NFT

Rust/: Cargo.toml
Rust/src/: error.rs  state.rs
app/: package.json
app/public/: index.html
app/src/: App.css  App.tsx
app/src/utils/: constant.ts  nfts.ts
deploy/: deploy.js  package.json
nftinterface/src/: entrypoint.rs  error.rs  instruction.rs  state.rs
