[package]
name = "nfts"
version = "0.0.1"
description = "This program will help you to create whitelist"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
num-derive = "0.3"
arrayref = "0.3.6"
borsh = "0.9.1"
thiserror = "1.0.30"
num-traits = "0.2"
solana-program = "1.7.11"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}

[dev-dependencies]
solana-sdk = "1.7.11"
solana-program-test = "1.7.11"

[lib]
crate-type = ["cdylib", "lib"]